--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -26,6 +26,8 @@ linter:
     prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
     always_use_package_imports: true
     lines_longer_than_80_chars: false
+    prefer_const_constructors: false
+    prefer_const_literals_to_create_immutables: false
 
 
 # Additional information about this file can be found at
