--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_colorpicker: ^1.0.3
   statsfl: ^2.3.0
-  url_launcher: ^6.1.5
+  url_launcher: ^6.1.11
   flutter_simple_calculator: ^2.2.2
   google_fonts: ^3.0.1
 
@@ -67,6 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - coop_term_reports/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
