--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   url_launcher: ^6.1.11
   flutter_simple_calculator: ^2.2.2
   google_fonts: ^3.0.1
+  path: ^1.8.2
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
