--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_colorpicker: ^1.0.3
-  statsfl: ^2.3.0
   url_launcher: ^6.1.11
   flutter_simple_calculator: ^2.2.2
   google_fonts: ^3.0.1
   path: ^1.8.2
   photo_view: ^0.14.0
+  fps_widget: ^1.0.1+2
+  statsfl: ^2.3.0
 
 dev_dependencies:
   flutter_test:
