--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,10 @@ flutter:
     - family: Consolas
       fonts:
         - asset: fonts/Consolas.ttf
+    - family: Inconsolata
+      fonts:
+        # - asset: fonts/Inconsolata-Regular.ttf
+        - asset: fonts/Inconsolata-VariableFont_wdth,wght.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
