--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   photo_view: ^0.14.0
   fps_widget: ^1.0.1+2
   statsfl: ^2.3.0
+  flame: ^1.7.3
 
 dev_dependencies:
   flutter_test:
