Update dependencies and fix code formatting

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,7 +7,8 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
-include: package:flutter_lints/flutter.yaml
+# include: package:flutter_lints/flutter.yaml
+include: package:very_good_analysis/analysis_options.yaml
 
 linter:
   # The lint rules applied to this project can be customized in the
@@ -28,6 +29,16 @@ linter:
     lines_longer_than_80_chars: false
     prefer_const_constructors: false
     prefer_const_literals_to_create_immutables: false
+    curly_braces_in_flow_control_structures: false
+    
+    # very good analysis options
+    public_member_api_docs: false
+    prefer_final_fields: false
+    sort_constructors_first: false
+    cascade_invocations: false
+    prefer_final_in_for_each: false
+    prefer_final_locals: false
+    constant_identifier_names: false
 
 
 # Additional information about this file can be found at
