Update .gitignore and makefile, remove cuper_icons from main.dart

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# This is where the web build for github pages outputs
+github_pages/
