--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,10 @@ migrate_working_dir/
 .packages
 .pub-cache/
 .pub/
-/build/
+/build/*
+
+# Ignore all build directories except build/web
+!/build/web/
 
 # Symbolication related
 app.*.symbols
@@ -42,6 +45,3 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-
-# This is where the web build for github pages outputs
-github_pages/
