Update about tab with additional information

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: my_website
+name: jamesmoreau_github_io
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
