--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flame: ^1.7.3
   flutter_svg: ^2.0.7
   syncfusion_flutter_pdfviewer: ^26.2.11
+  mouse_follower: ^1.2.3
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
