--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_svg: ^2.0.7
   syncfusion_flutter_pdfviewer: ^26.2.11
   mouse_follower: ^1.2.3
-  universal_html: ^2.2.4
+  image_sequence_animator: ^2.0.0
 
 dev_dependencies:
   flutter_test:
