--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flame: ^1.7.3
   flutter_svg: ^2.0.7
   syncfusion_flutter_pdfviewer: ^26.2.11
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
