--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -31,6 +31,13 @@ jobs:
         with:
           flutter-version: stable
 
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+          flutter-version-file: pubspec.yaml # path to pubspec.yaml
+      - run: flutter --version
+
       - name: Install dependencies
         run: flutter pub get
 
