--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -29,8 +29,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: stable
-          flutter-version-file: pubspec.yaml # path to pubspec.yaml
+          channel: stable # or: beta, master (or main)
       - run: flutter --version
 
       - name: Install dependencies
