--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: stable # or: beta, master (or main)
+          channel: stable
+          flutter-version-file: pubspec.yaml # path to pubspec.yaml
       - run: flutter --version
 
       - name: Install dependencies
